# goosetypes

./: pyproject.toml
goosetypes/: _core.py
